# dart_pdf

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.NAPKIN.md  README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map  manifest.json  pubspec.yaml  version.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/workflows/: dart.yaml  stale.yml
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
assets/shaders/: ink_sparkle.frag
demo/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
demo/android/app/: build.gradle
demo/ios/: .gitignore
demo/ios/Runner/: Info.plist
demo/ios/Runner.xcodeproj/: project.pbxproj
demo/lib/: app.dart  calendar.dart  certificate.dart  data.dart  document.dart  examples.dart  invoice.dart  main.dart  report.dart  resume.dart
demo/lib/examples/: calendar.dart  certificate.dart  document.dart  invoice.dart  report.dart  resume.dart  server.dart
demo/linux/: CMakeLists.txt  my_application.cc
demo/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
demo/macos/: .gitignore
demo/macos/Runner/: Info.plist  Release.entitlements
demo/macos/Runner.xcodeproj/: project.pbxproj
demo/test/: printing_test.dart  widget_test.dart
demo/test_driver/: app.dart  app_test.dart
demo/web/: index.html  manifest.json
demo/windows/: CMakeLists.txt
demo/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
demo/windows/runner/: Runner.rc  main.cpp
documents/: generate_europass_documents.py
example/: main.dart
lib/: pdf.dart
lib/src/: annotation.dart  array.dart  border.dart  catalog.dart  color.dart  document.dart  font.dart  font_descriptor.dart  formxobject.dart  graphics.dart  image.dart  info.dart  object.dart  object_stream.dart  outline.dart  page.dart  page_format.dart  page_list.dart  point.dart  polygon.dart  stream.dart  ttffont.dart  xref.dart
mason/: CHANGELOG.md  README.md  brick.yaml
pdf/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
pdf/example/: bidi_test.dart  main.dart  svg_test.dart
pdf/lib/: pdf.dart  svg.dart  widgets.dart
pdf/lib/io/: interface.dart  js.dart  vm.dart
pdf/lib/src/: GsubTableParser.dart  annotation.dart  arabic.dart  archive.dart  array.dart  ascii85.dart  border.dart  catalog.dart  color.dart  colors.dart  compatibility.dart  data_types.dart  document.dart  document_parser.dart  encryption.dart  exif.dart  font.dart  font_descriptor.dart  font_metrics.dart  formxobject.dart  function.dart  graphic_state.dart  graphic_stream.dart  graphics.dart  image.dart  info.dart  io.dart  io_archive.dart  io_vm.dart  names.dart  object.dart  object_stream.dart  outline.dart  output.dart  page.dart  page_format.dart  page_list.dart  parse_types.dart  parser.dart  pattern.dart  (+18 more)
pdf/test/: all_tests.dart  annotations.dart  annotations_test.dart  arabic_test.dart  bangla_test.dart  benchmark_gpos.dart  colors.dart  colors_test.dart  complex_script_test.dart  complex_test.dart  data_types_test.dart  dropdown_test.dart  file_test.dart  image_test.dart  indic_test.dart  inherited_test.dart  isolate.dart  isolate_test.dart  jpeg_test.dart  malayalam_test.dart  metrics.dart  metrics_test.dart  minimal_test.dart  orientation_test.dart  page_labels_test.dart  rect_test.dart  roll_paper_test.dart  rtl_layout_test.dart  ttf_test.dart  type1_test.dart  utils.dart  widget_barcode_test.dart  widget_basic_test.dart  widget_chart_test.dart  widget_clip_test.dart  widget_container_test.dart  widget_flex_test.dart  widget_form_test.dart  widget_grid_view_test.dart  widget_icon_test.dart  (+13 more)
pdf/test_driver/: app.dart  app_test.dart
pdf/web_example/: README.md  pubspec.yaml
printing/: CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  pubspec.yaml
printing/android/: build.gradle  settings.gradle
printing/example/: .gitignore  README.md  main.dart  pubspec.yaml
printing/ios/: printing.podspec
printing/lib/: printing.dart  printing_web.dart
printing/linux/: CMakeLists.txt  print_job.cc  print_job.h  printing_plugin.cc
printing/linux/include/printing/: printing_plugin.h
printing/macos/: printing.podspec
printing/test/: document.dart  document_test.dart  info_test.dart  printing_test.dart  raster_test.dart
printing/test_driver/: widget_wrapper.dart  widget_wrapper_test.dart
printing/windows/: .gitignore  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  print_job.cpp  print_job.h  printing.cpp  printing.h  printing_plugin.cpp
printing/windows/include/printing/: printing_plugin.h
printing/windows/pdfium/: PDFiumConfig.cmake
printing/windows/pdfium/include/: fpdf_annot.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_formfill.h  fpdf_ppo.h  fpdf_signature.h  fpdf_sysfontinfo.h  fpdfview.h
printing/windows/pdfium/include/cpp/: fpdf_deleters.h  fpdf_scopers.h
printing/windows/pdfium/x64/lib/: pdfium.dll.lib
test/: build_gfonts.dart  compare-pdf.sh  example.dart  extract_readme.dart  github_social_preview.dart  pana_report.py  pdf1_test.dart  pdf_test.dart  pubspec.yaml  ttf_test.dart
widget_wrapper/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
widget_wrapper/lib/: pdf_widget_wrapper.dart
(+332 files in other folders)
